loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:7: error: not found: value isOnBiscuit
    if (isOnBiscuit()) {
        ^