loopdowhile.Poucet2.scala.code
var biscuit = 0


do {
  do {
    forward()
    if (isOnBiscuit()) {
      biscuit = biscuit +1
    }
    
  } while(crossing() == false)
    
  if (biscuit <3){
     right()
  }
   else {
      left()
   }
  
  biscuit = 0
} while (exitReached() == false)
forward()